<resources>
    <string name="mPharmacien">My P-Employees</string>
    <string name="mPharmacie">My Pharmacy</string>
    <string name="mParametre">Options</string>
    <string name="title_activity_home_fragment">Home Fragment</string>
    <string name="confirm_dialog">Confirm</string>
    <string name="title_activity_ma_pharmacie">My Pharmacy</string>
    <string name="title_activity_maps">Map</string>
    <string name="app_name">My Pharmacy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="Welcome">Welcome to MyPharmacy App</string>
    <string name="select_type">Select a type to login or sign-up</string>
    <string name="create_acc">create an account </string>
    <string name="acc_user">Create User account</string>
    <string name="acc_phrma">Create Pharmacist account</string>
    <string name="acc_emp">Create P-Employee account</string>
    <string name="title_activity_user_nav">UserNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="title_activity_new_account">NewAccount</string>
    <string name="hello_blank_fragment">Hello main fragment</string>
    <string name="searchPharmacy">Search Pharmacy</string>
    <string name="ModifyStock">Modify stock</string>
    <string name="AddMed">Add medicament</string>
    <string name="searchMedicament">Search Medicament</string>
    <string name="lng">App language</string>
    <string name="confirm">Confirm</string>
    <string name="En">English</string>
    <string name="Fr">Français</string>
    <string name="Ar">العربية</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="et_name">Name</string>
    <string name="et_surname">Surname</string>
    <string name="conf_pass">Confirm password</string>
    <string name="email">Email</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="phone_num">Phone number</string>
    <string name="home_address">Home address</string>
    <string name="login">LOGIN</string>
    <string name="type_user">Client</string>
    <string name="type_pharmacist">Pharmacist</string>
    <string name="type_pemployee">P-Employee</string>
    <string name="add_pharmacy">Add your pharmacy</string>
    <string name="title_activity_set_phatmacy">Map</string>
    <string name="set_pharmacy_location">Set pharmacy location</string>
    <string name="pharmacy_title_item">Pharmacy :</string>
    <string name="pharmacy_nearby">Pharmacy nearby:</string>
    <string name="Adress_title_item">Address :</string>
    <string name="medicament_title_item">Medicament:</string>
    <string name="dosage_title_item">Dosage:</string>
    <string name="title_activity_pharmacy_location">Map</string>
    <string name="pharmacy_location">Pharmacy Location</string>
    <string name="pharm_name">Pharmacy name</string>
    <string name="name_is_empty">Name is empty !</string>
    <string name="adress_is_empty">Address is empty !</string>
    <string name="pharmacy_store_code">Pharmacy store code</string>
    <string name="Password_is_empty">Password is empty !</string>
    <string name="Confirm_Password_is_empty">Confirm Password is empty !</string>
    <string name="Email_is_empty">Email is empty !</string>
    <string name="code_is_empty">Confirmation code is empty !</string>
    <string name="dateofbirth_is_empty">date of birth is empty !</string>
    <string name="birth_place_empty">birth place is empty!</string>
    <string name="HomeAdress_is_empty">Home address is empty !</string>
    <string name="storeCode_is_empty">Pharmacy store code is empty !</string>
    <string name="Phone_number_is_empty">Phone number is empty !</string>
    <string name="pharmacy_map_error">You need to add your pharmacy in the map</string>
    <string name="Confirm_password_error">Confirm password empty or does not match the password</string>
    <string name="Username_is_empty">Username is empty !</string>
    <string name="Surname_is_empty">Surname is empty !</string>
    <string name="account_created_succ">Account created successfully !</string>
    <string name="title_activity_employee_nav">EmployeeNav</string>
    <string name="medicament_name">Medicament name</string>
    <string name="dosage_med">Dosage</string>
    <string name="age">Age</string>
    <string name="type_med">Medicament type</string>
    <string name="med_name_is_empty">Medicament name is empty</string>
    <string name="dosage_is_empty">Dosage is empty</string>
    <string name="age_title">Age:</string>
    <string name="type_title">Type:</string>
    <string name="storage_title">Storage:</string>
    <string name="title_activity_pharmasist_nav">Pharmacist Nav</string>
    <string name="title_activity_ma_pharmacie_fragment">maPharmacieFragment</string>
    <string name="modif_stock">Modify medicament stock</string>
    <string name="my_employees">My P-Employees</string>
    <string name="title_activity_my__pharmacy">My_Pharmacy</string>
    <string name="add_employee">Add Employee</string>
    <string name="emp_id_hint">Employee ID</string>
    <string name="Detaille">Info</string>
    <string name="NEmplyee">New Employee</string>
    <string name="message_active">Your account will be active soon</string>
    <string name="work_time">Set work time</string>
    <string name="from">From :</string>
    <string name="to">to :</string>
    <string name="addTiming">Add timing</string>
    <string name="pharmacy_timing">Pharmacy timing</string>
    <string name="aviable_med">Available medicaments :</string>
    <string name="delete_pharmacy">Delete pharmacy</string>
    <string name="birth_place">Country</string>
    <string name="GPSAlertDialogMessage">Alert Message</string>
    <string name="GPSAlertDialogTitle">Alert Dialogue</string>
    <string name="permission_required_toast">activate permission</string>
    <string name="location_permission_denied">activate permission</string>
    <string name="permission_rationale_location">activate permission</string>
    <string name="current_state">Pharmacy now :</string>
    <string name="closed">closed</string>
    <string name="opned">Opned</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="p_state">Pharmacy now :</string>
    <string name="certification_id">Certification ID</string>
    <string name="MyProfile">My Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="old_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="conf_new_pass">Confirm new password</string>
    <string name="country">Country</string>
    <string name="newpss">New?</string>
    <string name="x">Cancel</string>
    <string name="wrong_pass">Wrong password !</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="user_exist">Username already exist !</string>
    <string name="forget_password">Forget password ?</string>
    <string name="reset_password">Reset password</string>
    <string name="send_confirmation_code">We\'ll send a confirmation code to your email:</string>
    <string name="next">Next ▶</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="step_1">Step 1 :</string>
    <string name="step_2">Step 2 :</string>
    <string name="step_3">Step 3 :</string>
    <string name="set_your_new_password">Set your new password:</string>
    <string name="get_confirmation_code_from_your_email">Get the confirmation code from your email:</string>
    <string name="email_no_account">Email not associated to any account !</string>
    <string name="conf_no_match">Confirmation code doesn\'t match !</string>
    <string name="no_item_found">No item found !</string>
    <string name="add_new_employee">Add new Employee</string>
    <string name="add">Add</string>
    <string name="phone_row">Phone :</string>
    <string name="name_row">Name :</string>
    <string name="id_row">ID :</string>
    <string name="usrname_row">Username :</string>
    <string name="surname_row">Surname :</string>
    <string name="email_row">Email :</string>
    <string name="homeadd_row">Home address :</string>
    <string name="id_diplome">ID diploma :</string>
    <string name="you_want_delete_emp">Do you really want to delete</string>
    <string name="from_your_list">from your employee list ?</string>
    <string name="wrng_pass">Wrong password !</string>
    <string name="parm_deleted_succ">Pharmacy deleted successfully</string>
    <string name="emp_delet_succ">Employee deleted successfully</string>
    <string name="del_pharm_conf">Do you really want to delete your pharmacy ?</string>
    <string name="emp_gender">Employee gender :</string>
    <string name="dir_gender">Director gender :</string>
    <string name="emp_id_empty">Employee ID is empty !</string>
    <string name="emp_in_work">Employee Already in work !</string>
    <string name="no_pharm_found">No pharmacy found !</string>
    <string name="med_up_succ">Medicament updated successfully !</string>
    <string name="med_up_unsucc">Medicament update unsuccessful !</string>
    <string name="email_used">Email already exists !</string>
    <string name="pharm_succ">Pharmacy creation unsuccessfully !</string>
    <string name="invalid_contact">Invalid pharmacy contract !</string>
    <string name="acc_cret_succ">Account created successfully !</string>
    <string name="distance">Distance (vehicle) :</string>
    <string name="duration">Duration :</string>
    <string name="atleast_select_oneday">Please select at least 1 day of work !</string>
    <string name="director_pharmacist_info">Director pharmacist info</string>
    <string name="add_pharmacy_s_contract_id">Add store code</string>
    <string name="add_pharmacy_location">Add pharmacy location</string>
    <string name="add_pharmacy_timing">Add pharmacy timing</string>
    <string name="location_done">Pharmacy location Done</string>
    <string name="timing_done">Pharmacy timing Done</string>
    <string name="help_to_ad_pharmacy">● Long Click to add your pharmacy. \n● hold the marker to drag it.</string>
    <string name="SERVER_ERROR">Cant connect to the server !!</string>
    <string name="pharm_succ_created">Pharmacy created successfully!</string>
    <string name="suv_med">Medicament successfully added</string>
    <string name="u_hv_no_ph">You have no Pharmacy !</string>
    <string name="call_perm">Sorry can\'t make a call !!! Permission denied</string>
    <string name="no_ph_please_wait">No Pharmacy found please wait!</string>
    <string name="wait_conf_ph">Please wait the confirmation of the new pharmacy !</string>
    <string name="ph_no_valid">Pharmacy not validated yet !</string>
    <string name="ph_no_exist">Pharmacy doas not existe !</string>
    <string name="done">done !</string>
    <string name="editlocationfab">Press edit fab to edit location</string>
    <string name="ed_saved">Changes saved successfully</string>
    <string name="options">Options</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="medicaments">Medicaments</string>
    <string name="favorite_pharmacies">Favorite pharmacies</string>
    <string name="favorite_medicaments">Favorite medicaments</string>
</resources>