<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/MyProfile"
            android:icon="@drawable/ic_profile"
            android:title="@string/MyProfile" />
        <item
            android:id="@+id/mPharmacie"
            android:icon="@drawable/ic_store"
            android:title="@string/mPharmacie" />
        <item
            android:id="@+id/mPharmacien"
            android:icon="@drawable/ic_my_employees"
            android:title="@string/my_employees" />
        <item
            android:id="@+id/ModifyStock"
            android:icon="@drawable/ic_stock"
            android:title="@string/modif_stock" />
        <item
            android:id="@+id/AddMedic"
            android:icon="@drawable/ic_add"
            android:title="@string/AddMed" />
    </group>

    <item android:title="@string/options">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_language"
                android:title="@string/language" />
            <item
                android:id="@+id/log_out"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
