<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/MyProfile"
            android:icon="@drawable/ic_profile"
            android:title="@string/MyProfile" />
        <item
            android:id="@+id/pharmacies"
            android:icon="@drawable/ic_store"
            android:title="@string/pharmacies" />
        <item
            android:id="@+id/med_list"
            android:icon="@drawable/ic_med_list"
            android:title="@string/medicaments"
           />
        <item
            android:id="@+id/favorite_pharmacies"
            android:icon="@drawable/ic_star"
            android:title="@string/favorite_pharmacies" />
        <item
            android:id="@+id/favorite_med_list"
            android:icon="@drawable/ic_favorite_item"
            android:title="@string/favorite_medicaments"
            />
    </group>

    <item android:title="@string/options">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_language"
                android:title="@string/language" />
            <item
                android:id="@+id/log_out"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
