<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/my_dialog"
    android:orientation="vertical"
    tools:context="com.srdeveloppement.atelier.mypharmacy.Dialog_restor_password"
    android:layout_margin="20dp"
    android:layout_gravity="center">
    <RelativeLayout
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/relativeLayout6">
        <TextView
            android:lines="1"
            android:layout_marginRight="40dp"
            android:ellipsize="end"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:id="@+id/text_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textColor="#ffffff"/>
        <FrameLayout
            android:layout_alignParentRight="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/close_shape">
            <Button
                android:id="@+id/close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?android:attr/selectableItemBackground"/>
        </FrameLayout>
    </RelativeLayout>

    <!--content-->

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/relativeLayout6">
        <LinearLayout
            android:orientation="vertical"
            android:visibility="visible"
            android:id="@+id/SendEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:fontFamily="sans"
                android:textSize="18sp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:text="@string/step_1"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:textStyle="bold"
                android:fontFamily="sans"
                android:textSize="18sp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_confirmation_code"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="sans-serif-light"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_primaryColor="@color/colorAccent"
                app:met_textColor="#000000"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:met_textColorHint="#40000000"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextColor="#000000"
                app:met_helperText=""
                app:met_helperTextColor="#ccc"
                app:met_underlineColor="@color/colorAccent"
                app:met_baseColor="@color/colorAccent"
                app:met_errorColor="#F44336"
                app:met_singleLineEllipsis="true"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/ConfirmCodeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:fontFamily="sans"
                android:textSize="18sp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step_2"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:textStyle="bold"
                android:fontFamily="sans"
                android:textSize="18sp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_confirmation_code_from_your_email"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="sans-serif-light"
                android:id="@+id/code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_primaryColor="@color/colorAccent"
                app:met_textColor="#000000"
                android:hint="@string/confirmation_code"
                android:inputType="number"
                app:met_textColorHint="#40000000"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelTextColor="#000000"
                app:met_helperText=""
                app:met_helperTextColor="#ccc"
                app:met_underlineColor="@color/colorAccent"
                app:met_baseColor="@color/colorAccent"
                app:met_errorColor="#F44336"
                app:met_singleLineEllipsis="true"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/ChangePassLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:fontFamily="sans"
                android:textSize="18sp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step_3"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:textStyle="bold"
                android:fontFamily="sans"
                android:textSize="18sp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_your_new_password"/>
            <RelativeLayout
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:visibility="visible"
                android:id="@+id/changePassword_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/Password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:text=""
                        android:textCursorDrawable="@drawable/text_cursor_cyan"
                        app:met_baseColor="@color/colorAccent"
                        app:met_clearButton="true"
                        app:met_errorColor="#F44336"
                        app:met_floatingLabel="highlight"
                        app:met_floatingLabelTextColor="#000000"
                        app:met_helperText=""
                        app:met_helperTextColor="#ccc"
                        app:met_maxCharacters="20"
                        app:met_primaryColor="@color/colorAccent"
                        app:met_singleLineEllipsis="true"
                        app:met_textColor="#000000"
                        app:met_textColorHint="#40000000"
                        app:met_underlineColor="@color/mytransparent" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/conf_Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/conf_new_pass"
                        android:inputType="textPassword"
                        android:textCursorDrawable="@drawable/text_cursor_cyan"
                        app:met_baseColor="@color/colorAccent"
                        app:met_clearButton="true"
                        app:met_errorColor="#F44336"
                        app:met_floatingLabel="highlight"
                        app:met_floatingLabelTextColor="#000000"
                        app:met_helperText=""
                        app:met_helperTextColor="#ccc"
                        app:met_maxCharacters="20"
                        app:met_primaryColor="@color/colorAccent"
                        app:met_singleLineEllipsis="true"
                        app:met_textColor="#000000"
                        app:met_textColorHint="#40000000"
                        app:met_underlineColor="@color/mytransparent" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>





    </FrameLayout>




    <FrameLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent"
        android:id="@+id/frameLayout"
        android:layout_below="@+id/frameLayout1"
        android:layout_centerHorizontal="true">
        <Button
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/Next"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            />
    </FrameLayout>

</RelativeLayout>
