<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

<LinearLayout
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/selectableItemBackground"
    android:id="@+id/myItem"
    android:orientation="vertical"
    >
    <LinearLayout
        android:padding="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView

            android:textSize="16sp"
            android:fontFamily="sans"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pharmacy_title_item" />

        <TextView

            android:textSize="16sp"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-light"
            android:layout_marginLeft="10dp"
            android:text=""
            android:id="@+id/pharmacy_name"
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:padding="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView

            android:textSize="16sp"
            android:fontFamily="sans"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Adress_title_item" />

        <TextView

            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginLeft="10dp"
            android:text=""
            android:id="@+id/pharmacy_adress"
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:padding="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView

            android:textSize="16sp"
            android:fontFamily="sans"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storage_title" />

        <TextView

            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginLeft="10dp"
            android:text=""
            android:id="@+id/medStorage"
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:padding="3dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView

            android:textSize="16sp"
            android:fontFamily="sans"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p_state" />

        <TextView

            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginLeft="10dp"
            android:text="@string/closed"
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</LinearLayout>

    <View
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorPrimaryDark"
        android:alpha="0.3"/>
</FrameLayout>